<resources>
    <string name="app_name">BMI Analyzer</string>
    <string name="next"><u>Next</u></string>
    <string name="welcome"><b>Welcome Back</b></string>
    <string name="have_account">If you already have an account, log in</string>
    <string name="bmi">BMI</string>
    <string name="login"><b>LOG IN</b></string>
    <string name="donthave"> You Dont Have An Account?</string>
    <string name="signup"> Sign Up</string>
    <string name="create_account">Create New Account</string>
    <string name="not_have_account">If you do not already have an account</string>
    <string name="create"><b>CREATE</b></string>
    <string name="login2">Login</string>
    <string name="have_account_before">You Have An Account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="complete">Complete Your Information</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="save"><b>Save Data</b></string>
    <string name="new_record">New Record</string>
    <string name="date">Date </string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="time">Time</string>
    <string name="kg">kg</string>
    <string name="plus">+</string>
    <string name="minis">-</string>
    <string name="cm">cm</string>
    <string name="add_food">Add Food Details</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="tringle"></string>
    <string name="calory">Calory</string>
    <string name="cal">cal /g</string>
    <string name="photo">Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="save2"><b>Save </b></string>
    <string name="add">Add Food</string>
    <string name="add_record">Add Record</string>
    <string name="view_food">View Food</string>
    <string name="logout"><u>Logout</u></string>
    <string name="use_name">Hi,Mohammed</string>
    <string name="current_status">Current status</string>
    <string name="status">Normal(still Good)</string>
    <string name="old_status">Old Status</string>
</resources>