<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/activity_toolbar" android:id="@+id/toolbar"/>


    <androidx.core.widget.NestedScrollView android:layout_height="match_parent" android:layout_width="match_parent" android:fillViewport="true">


    <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent" android:isScrollContainer="true" android:animateLayoutChanges="true">

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/username" android:textStyle="bold" android:textSize="22sp" android:textColor="@color/black" android:textAlignment="center" android:text="@string/use_name" android:layout_marginTop="30dp" android:layout_gravity="center"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/currentState" android:textStyle="bold" android:textSize="18sp" android:textColor="@color/blue2" android:text="@string/current_status" android:layout_gravity="center|start" android:gravity="center|start" android:layout_marginEnd="20dp" android:layout_marginStart="20dp"/>

    <EditText android:background="@drawable/style_of_button2" android:layout_height="45dp" android:layout_width="match_parent" android:id="@+id/status" android:textAlignment="center" android:layout_marginTop="10dp" android:layout_gravity="center|start" android:gravity="center|start" android:layout_marginEnd="20dp" android:layout_marginStart="20dp" android:inputType="text" android:hint="@string/status" android:ems="20"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/old_status" android:textStyle="bold" android:textSize="18sp" android:textColor="@color/blue2" android:text="@string/old_status" android:layout_marginTop="20dp" android:layout_gravity="center|start" android:gravity="center|start" android:layout_marginEnd="20dp" android:layout_marginStart="20dp"/>

    <androidx.recyclerview.widget.RecyclerView android:orientation="vertical" android:background="#1685d8" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/home" android:layout_marginTop="10dp" android:layout_marginEnd="20dp" android:layout_marginStart="20dp"/>


    -<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="25dp" android:layout_marginEnd="10dp" android:layout_marginStart="10dp">

    <Button android:background="@drawable/style_of_button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/add_food" android:textSize="19sp" android:textColor="@color/white" android:text="@string/add" android:gravity="center" android:layout_marginEnd="10dp" android:layout_marginStart="10dp" android:textAllCaps="false" android:onClick="btn_food" android:layout_weight="1"/>

    <Button android:background="@drawable/style_of_button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/add_record" android:textSize="19sp" android:textColor="@color/white" android:text="@string/add_record" android:gravity="center" android:layout_marginEnd="10dp" android:layout_marginStart="10dp" android:textAllCaps="false" android:onClick="btn_record" android:layout_weight="1"/>

</LinearLayout>

    <Button android:background="@drawable/style_of_button" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/view_food" android:textSize="19sp" android:textColor="@color/white" android:text="@string/view_food" android:layout_marginTop="15dp" android:gravity="center" android:layout_marginEnd="20dp" android:layout_marginStart="20dp" android:textAllCaps="false" android:onClick="btn_view_food"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/logout" android:textSize="20sp" android:textColor="@color/black" android:text="@string/logout" android:layout_marginTop="40dp" android:layout_gravity="center" android:gravity="center" android:onClick="text_login" android:layout_marginBottom="20dp"/>

</LinearLayout>

</androidx.core.widget.NestedScrollView>

</LinearLayout>