<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:visibility="visible"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:paddingTop="10dp"
            android:scrollIndicators="top"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/textView"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textAlignment="center"
            android:text="@string/new_record"
            android:textColor="@color/blue"
            android:textSize="40sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/weight"
        android:layout_marginLeft="30dp"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:text="@string/length"
        android:layout_marginLeft="30dp"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"/>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="350dp"
        android:text="@string/date"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:background="@drawable/style_of_edit_text"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="350dp"
        />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="400dp"
        android:text="@string/time"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:background="@drawable/style_of_button"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="500dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="19sp"
        />

</FrameLayout>