<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:visibility="visible"
    tools:visibility="visible">

    <include
        android:id="@+id/toolbar"
        layout="@layout/activity_toolbar"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="90dp"
                android:gravity="top"
                android:text="@string/welcome"
                android:textColor="@color/blue"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="top"
                android:text="@string/have_account"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="92dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/e_mail"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/style_of_edit_text"
            android:ems="20"
             android:hint="@string/username"
            android:inputType="text"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="191dp" />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="350dp"
    app:passwordToggleEnabled="true" >
        <EditText
            android:id="@+id/password"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="320dp"
            android:background="@drawable/style_of_edit_text"
            android:ems="20"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="304dp" />
</com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="460dp"
            android:background="@drawable/style_of_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="19sp"
            tools:ignore="OnClick"
            android:onClick="btn_login"/>

        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="530dp"
            android:text="@string/donthave"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/signup"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginLeft="267dp"
            android:layout_marginTop="530dp"
            android:onClick="text_sign"
            android:text="@string/signup"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </FrameLayout>
