<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_record">
    <include
        android:id="@+id/toolbar"
        layout="@layout/activity_toolbar2"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/textView"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/add_food"
            android:textColor="@color/blue"
            android:textSize="40sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="170dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/blue"
            android:textSize="20sp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/name1"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:background="@drawable/style_of_edit_text2"
            android:inputType="text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="210dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/blue"
            android:textSize="20sp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="210dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/category"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginLeft="140dp"
            android:inputType="numberDecimal"
            android:background="@drawable/style_of_edit_text2"/>

        <Button
            android:id="@+id/plus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="-1dp"
            android:background="@drawable/style_of_button2"
            android:text="@string/plus"
            android:textColor="@color/blue"
            android:textSize="20sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="250dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/calory"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/calory"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginLeft="41dp"
            android:background="@drawable/style_of_edit_text2"
            android:ems="10"
            android:inputType="numberDecimal" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/cal"
            android:textColor="@color/blue"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="290dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textColor="@color/blue"

            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="320dp">
        <ImageView
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/upload_photo"
            tools:ignor="MissingConstraints"
            android:src="@drawable/upload_photo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="620dp"
        android:gravity="left"
        android:orientation="horizontal">

        <Button
            android:id="@+id/upload_photo"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/style_of_button"
            android:gravity="center"
            android:text="@string/upload_photo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/style_of_button"
            android:gravity="center"
            android:text="@string/save2"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>
</FrameLayout>
